# sysmlv2_dls

./: .coverage  .gitignore  README.md  basic_usage.ipynb  pip.conf  pyproject.toml  requirements-ci.txt  requirements.txt  sonar-project.properties
.github/workflows/: sonarqube.yml  test-sysmlv2-dls.yml
examples/: basic_usage.ipynb  example_geometry_commit_retrieve.py  geo_model.sysml
src/geometry_api/: __init__.py  geometry_api.py  transformations.py
src/onshape_api/: onshape_helper.py
src/transformation_api/: __init__.py
tests/: geometry_example.sysml  onshape_export.py  test_extra_attrs.py  test_geometry_api.py  test_onshape_export.py  test_trafo.py
